VZDEV/src/objects/ccpm_leadStatusDesc__mdt.object
<CustomObject>
    <fields>
        <fullName>CCPM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_createdChannel__c</fullName>
        <label>Created Channel</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpm_nextSteps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lead Status Description</label>
    <pluralLabel>Lead Status Descriptions</pluralLabel>
</CustomObject>